code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_163.wast
(assert_invalid
  (module (func $type-param-nested-void-vs-num
    (block (block (param i32) (drop)))
  ))
  "type mismatch"
)